// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-URL-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-URL-field-name-"
      onChange={[Function]}
      type="text"
      value="Test"
    />
    <span
      className="input-group-addon"
    >
      <a
        href="Test"
      >
        <i
          className="fa fa-external-link fa-lg"
        />
      </a>
    </span>
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      It is not an url
    </span>
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-URL-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-URL-field-name-"
      onChange={[Function]}
      type="text"
      value="Test"
    />
    <span
      className="input-group-addon"
    >
      <a
        href="Test"
      >
        <i
          className="fa fa-external-link fa-lg"
        />
      </a>
    </span>
  </div>
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-URL-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-URL-field-name-"
      onChange={[Function]}
      type="text"
      value="Test"
    />
    <span
      className="input-group-addon"
    >
      <a
        href="Test"
      >
        <i
          className="fa fa-external-link fa-lg"
        />
      </a>
    </span>
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      It is not an url
    </span>
  </div>
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-URL-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-URL-field-name-"
      onChange={[Function]}
      type="text"
      value=""
    />
    <span
      className="input-group-addon"
    >
      <a
        href=""
      >
        <i
          className="fa fa-external-link fa-lg"
        />
      </a>
    </span>
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <a
    href="Test"
  >
    Test
  </a>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-URL-field-name-"
  >
     
  </label>
  <div>
    <a
      href="Test"
    >
      Test
    </a>
  </div>
</div>
`;
